edge cases for input

--- a/io_files/game.config
+++ b/io_files/game.config
@@ -1,12 +1,32 @@
 # The speed/delay of the game process recommanded value 10/20/40/60
 game_pace = 20  
 # The grid_size big or small
-grid_size = big
-# The alive point
+grid_size = small
+# The alive point, enter the coordinate
 x,y = 1,2
 x,y = 3,4
-x,y = 5,7
 x,y = 10,12
+x,y = 11,12
+x,y = 12,12
+x,y = 13,11
+x,y = 11,13
+x,y = 21,12
+x,y = 17,12
+x,y = 18,11
+x,y = 14,12
+x,y = 13,21
+x,y = 17,23
+x,y = 16,21
+x,y = 23,12
+x,y = 24,12
+x,y = 32,12
+x,y = 19,11
+x,y = 21,13
+x,y = 31,12
+x,y = 71,120
+x,y = 10,21
+x,y = 7,23
+x,y = 18,21
 
 
 
