--- a/io_files/game.config
+++ b/io_files/game.config
@@ -1,7 +1,7 @@
 # The speed/delay of the game process recommanded value 10/20/40/60
 game_pace = 20  
 # The grid_size big or small
-grid_size = big
+grid_size = small
 # The alive point, enter the coordinate
 x,y = 1,2
 x,y = 3,4
